# bazinga

./: CONSTITUTION.md  Cargo.toml  README.md
bench/metrics/: report.json  report.md
src/: main.rs
src/commands/: bench.rs  index.rs  mod.rs  sync_drive.rs  sync_github.rs  sync_notion.rs
src/engines/: agentic_pause.rs  agentic_sovereignty.rs  citizen_redress.rs  constitutional_engine.rs  janus_evaluator.rs  kintsuji_apl.rs  mod.rs  sovereign_shredder.rs  trustguard.rs  universal_context.rs  visitor_manifest.rs  willow_interface.rs  zero_erasure.rs
